Fixes alignment in search bar dropdowns

--- a/app/assets/stylesheets/framework/dropdowns.scss
+++ b/app/assets/stylesheets/framework/dropdowns.scss
@@ -376,7 +376,8 @@
       }
 
       > a,
-      > button {
+      > button,
+      > .gl-button {
         display: flex;
         margin: 0;
         text-overflow: inherit;
